# $Id: Makefile.am 29411 2007-11-20 20:44:57Z brlcad $

SUBDIRS = \
	Anim_Tutorial \
	archer \
	cadwidgets \
	libbu \
	libdm \
	librt \
	mged \
	shaders

htmldocsdir = $(BRLCAD_DATA)/html/manuals

htmldocs_DATA = \
	Install.html \
	Obtain.html \
	Overview.html \
	eagleCAD.gif \
	eagleCAD.bmp \
	index.html \
	small-eagleCAD.gif

EXTRA_DIST = \
	$(htmldocs_DATA) \
	small-eagleCAD.ico

include $(top_srcdir)/misc/Makefile.defs
