# $Id: Makefile.am 30784 2008-04-22 21:26:03Z erikgreenwald $

EXTRA_DIST = \
	rise.h \
	rise_struct.h \
	master/dispatcher.c \
	master/dispatcher.h \
	master/main.c \
	master/master.c \
	master/master.h \
	master/post.c \
	master/post.h \
	observer/main.c \
	observer/observer.c \
	observer/observer.h \
	slave/main.c \
	slave/slave.c \
	slave/slave.h

include $(top_srcdir)/misc/Makefile.defs
